--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</title>
 </head>
 <body>
-    <header class="header">
+    <header class="heading">
       <div class="container">
         <a class="navigation-logo" href="./index.html">Web<span class="header-logo">Studio</span></a>
        <nav class="navigation">
@@ -44,7 +44,7 @@
             +48 111 111 111</a>
         </p>
       </div>
-    </header>....
+    </header>
 
 
     <!--HERO -->
@@ -397,7 +397,7 @@
     </address>
     </section>
     <div class="media-footer">
-    <h3 class="header-footer">Dołącz do nas</h3>
+    <h3 class="heading-footer">Dołącz do nas</h3>
     <ul>
         <li class="list-footer">
             <a href="" class="link-footer_icon hover-transition">
