--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-     <header class="header">
+     <header class="heading">
       <div class="container">
         <a class="navigation-logo" href="./index.html">Web<span class="header-logo">Studio</span></a>
        <nav class="navigation">
@@ -180,7 +180,7 @@
     </address>
     </section>
     <ul class="media-footer">
-        <h3 class="header-footer">Dołącz do nas</h3>
+        <h3 class="heading-footer">Dołącz do nas</h3>
         <li class="list-footer">
             <a href="" class="link-footer_icon hover-transition">
                 <svg class="icon-footer" width="20px" height="20px">
