--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/main.min.css" />
     <title>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
        <nav class="navigation">
            <ul class="nav-list list">
                <li class="nav-link">
-                   <a class="nav-link-item-a link hover-transition" href="index.html">Agencja</a>
+                   <a class="nav-link-item active link hover-transition" href="index.html">Agencja</a>
                 </li>
                <li class="nav-link">
                    <a class="nav-link-item link hover-transition" href="portfolio.html">Portfolio</a>
