--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/main.min.css" />
     <title>Portfolio</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
                    <a class="nav-link-item link hover-transition hover-transition" href="index.html">Agencja</a>
                 </li>
                <li class="nav-link">
-                   <a class="nav-link-item-p link hover-transition hover-transition" href="portfolio.html">Portfolio</a>
+                   <a class="nav-link-item active link hover-transition hover-transition" href="portfolio.html">Portfolio</a>
                 </li>
                <li class="nav-link">
                    <a class="nav-link-item link hover-transition hover-transition" href="#">Kontakt</a>
