--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         <div class="display-box">
     <section class="section-footer">
     <h3 class="footer-heading">
-        <a class="navigation-logo" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+    <a class="navigation-logo" href="./index.html">Web<span class="bottom-logo">Studio</span></a>
     </h3>
     <address>
         <ul class="contact-list">
