--- a/portfolio.html
+++ b/portfolio.html
@@ -15,34 +15,35 @@
 <body>
      <header class="heading">
       <div class="container">
-        <a class="navigation-logo" href="./index.html">Web<span class="header-logo">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="logo-span">Studio</span></a>
        <nav class="navigation">
-           <ul class="nav-list list">
-               <li class="nav-link">
-                   <a class="nav-link-item link hover-transition hover-transition" href="index.html">Agencja</a>
+           <ul class="nav-list decoration">
+               <li class="nav-list-link">
+                   <a class="nav-list-item link hover-transition" href="index.html">Agencja</a>
                 </li>
-               <li class="nav-link">
-                   <a class="nav-link-item active link hover-transition hover-transition" href="portfolio.html">Portfolio</a>
+               <li class="nav-list-link">
+                   <a class="nav-list-item active link hover-transition" href="portfolio.html">Portfolio</a>
                 </li>
-               <li class="nav-link">
-                   <a class="nav-link-item link hover-transition hover-transition" href="#">Kontakt</a>
+               <li class="nav-list-link">
+                   <a class="nav-list-item link hover-transition" href="#">Kontakt</a>
                 </li>
            </ul>
        </nav> 
-       <p class="icon-mail">
+       <p class="mail">
         <a class="mail-address link hover-transition" href="info@devstudio.com">
-              <svg class="icon" width="16px" height="12px">
+              <svg class="mail-icon" width="16px" height="12px">
                <use href="./Images/icon.svg#icon-envelope"></use>
            </svg>
             info@devstudio.com
         </a>
         </p>
-        <p class="icon-phone">
+        <p class="phone">
         <a class="phone-number link hover-transition" href="tel:+48111111111">
-            <svg class="icon" width="10px" height="16px">
+            <svg class="phone-icon" width="10px" height="16px">
                 <use href="./Images/icon.svg#icon-Vector"></use>
             </svg>
-            +48 111 111 111</a>
+            +48 111 111 111
+        </a>
         </p>
       </div>
     </header>
@@ -167,58 +168,60 @@
         <div class="display-box">
     <section class="section-footer">
     <h3 class="footer-heading">
-        <a class="navigation-logo" href="./index.html">Web<span class="bottom-logo">Studio</span></a>
+    <a class="logo" href="./index.html">Web<span class="bottom-logo">Studio</span></a>
     </h3>
     <address>
-        <ul class="contact-list">
-            <li class="contact-list-item">
-                <a class="map-link hover-transition" href="https://goo.gl/maps/KTg1pb1Rxh6M7XKi7" target="blank"> Warszawa, Aleje Jerozolimskie 21</a></li>
-            <li class="contact-list-item">
+        <ul class="contact">
+            <li class="contact-list">
+                <a class="contact-link-map hover-transition" href="https://goo.gl/maps/KTg1pb1Rxh6M7XKi7" target="blank"> Warszawa, Aleje Jerozolimskie 21</a></li>
+            <li class="contact-list">
                 <a class="contact-link hover-transition" href="mailto:info@example.com">info@example.com</a></li>
-            <li class="contact-list-item">
+            <li class="contact-list">
                 <a class="contact-link hover-transition" href="tel:+48111111111">+48 111 111 111</a></li>
         </ul>
     </address>
     </section>
-    <ul class="media-footer">
-        <h3 class="heading-footer">Dołącz do nas</h3>
+    <div class="media-footer">
+    <h3 class="heading-footer">Dołącz do nas</h3>
+    <ul>
         <li class="list-footer">
-            <a href="" class="link-footer_icon hover-transition">
-                <svg class="icon-footer" width="20px" height="20px">
+            <a href="" class="list-footer-link hover-transition">
+                <svg class="list-footer-icon" width="20px" height="20px">
                     <use href="./Images/icon.svg#icon-instagram-2"></use>
                 </svg>
             </a>
         </li>
         <li class="list-footer">
-            <a href="" class="link-footer_icon hover-transition">
-                <svg class="icon-footer" width="20px" height="20px">
+            <a href="" class="list-footer-link hover-transition">
+                <svg class="list-footer-icon" width="20px" height="20px">
                     <use href="./Images/icon.svg#icon-twitter-1"></use>
                 </svg>
             </a>
         </li>
         <li class="list-footer">
-            <a href="" class="link-footer_icon hover-transition">
-                <svg class="icon-footer" width="20px" height="20px">
+            <a href="" class="list-footer-link hover-transition">
+                <svg class="list-footer-icon" width="20px" height="20px">
                     <use href="./Images/icon.svg#icon-facebook-1"></use>
                 </svg>
             </a>
         </li>
         <li class="list-footer">
-            <a href="" class="link-footer_icon hover-transition">
-                <svg class="icon-footer" width="20px" height="20px">
+            <a href="" class="list-footer-link hover-transition">
+                <svg class="list-footer-icon" width="20px" height="20px">
                     <use href="./Images/icon.svg#icon-linkedin-1"></use>
                 </svg>
             </a>
-        </li>.
+        </li>
     </ul>
+    </div>
     <form class="newsletter">
-    <label class="title-newsletter">
+    <label class="newsletter-title">
     Zapisz się do newslettera
-        <input class="email-newsletter" type="email" name="email" placeholder="E-mail" />
+        <input class="newsletter-email" type="email" name="email" placeholder="E-mail" />
     </label>
         <button class="btn-newsletter" type="button">
             Zapisz się
-            <svg class="icon-send" width="24px" height="24px">
+            <svg class="btn-newsletter-icon" width="24px" height="24px">
                     <use href="./Images/icon.svg#icon-icon-send"></use>
                 </svg>
         </button>
