--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
      <header class="heading">
       <div class="container">
         <a class="logo" href="./index.html">Web<span class="logo-span">Studio</span></a>
-       <nav class="navigation">
+       <nav class="nav">
            <ul class="nav-list decoration">
                <li class="nav-list-link">
                    <a class="nav-list-item link hover-transition" href="index.html">Agencja</a>
