--- a/portfolio.html
+++ b/portfolio.html
@@ -16,29 +16,29 @@
       <div class="container">
         <a class="logo" href="./index.html">Web<span class="logo-span">Studio</span></a>
        <nav class="nav">
-           <ul class="nav-list decoration">
-               <li class="nav-list-link">
-                   <a class="nav-list-item link hover-transition" href="index.html">Agencja</a>
+           <ul class="nav__list decoration">
+               <li class="nav__item">
+                   <a class="nav__link link hover-transition" href="index.html">Agencja</a>
                 </li>
-               <li class="nav-list-link">
-                   <a class="nav-list-item active link hover-transition" href="portfolio.html">Portfolio</a>
+               <li class="nav__item">
+                   <a class="nav__link active link hover-transition" href="portfolio.html">Portfolio</a>
                 </li>
-               <li class="nav-list-link">
-                   <a class="nav-list-item link hover-transition" href="#">Kontakt</a>
+               <li class="nav__item">
+                   <a class="nav__link link hover-transition" href="#">Kontakt</a>
                 </li>
            </ul>
        </nav> 
        <p class="mail">
-        <a class="mail-address link hover-transition" href="info@devstudio.com">
-              <svg class="mail-icon" width="16px" height="12px">
+        <a class="mail__address link hover-transition" href="info@devstudio.com">
+              <svg class="mail__icon" width="16px" height="12px">
                <use href="./Images/icon.svg#icon-envelope"></use>
            </svg>
             info@devstudio.com
         </a>
         </p>
         <p class="phone">
-        <a class="phone-number link hover-transition" href="tel:+48111111111">
-            <svg class="phone-icon" width="10px" height="16px">
+        <a class="phone__number link hover-transition" href="tel:+48111111111">
+            <svg class="phone__icon" width="10px" height="16px">
                 <use href="./Images/icon.svg#icon-Vector"></use>
             </svg>
             +48 111 111 111
@@ -49,113 +49,113 @@
     <main>
         <div class="container">
         <section>
-             <h4 hidden class="box">Ten element ma być niewidoczny</h4>
-        <ul class="btn-box">
-            <li class="button-list">
-                <button class="btn-item hover-transition" type="button">Wszystkie</button>
-            <li class="button-list">
-                <button class="btn-item hover-transition" type="button">Strony</button>
-            <li class="button-list">
-                <button class="btn-item hover-transition" type="button">Aplikacje</button>
-            <li class="button-list">
-                <button class="btn-item hover-transition" type="button">Dizajn</button>
-            <li class="button-list">
-                <button class="btn-item hover-transition" type="button">Marketing</button>
+             <h4 hidden>Ten element ma być niewidoczny</h4>
+        <ul class="btn__list">
+            <li class="btn__list--item">
+                <button class="btn__list--icon hover-transition" type="button">Wszystkie</button>
+            <li class="btn__list--item">
+                <button class="btn__list--icon hover-transition" type="button">Strony</button>
+            <li class="btn__list--item">
+                <button class="btn__list--icon hover-transition" type="button">Aplikacje</button>
+            <li class="btn__list--item">
+                <button class="btn__list--icon hover-transition" type="button">Dizajn</button>
+            <li class="btn__list--item">
+                <button class="btn__list--icon hover-transition" type="button">Marketing</button>
         </ul>
         </section>
         </div>
         <div class="container">
         <section class="section-img">
-          <h4 hidden class="box">Ten element ma być niewidoczny</h4>
-            <ul class="img-box">
-                <li class="img-list">
-                    <img class="photo-item" src="Images/img-9.jpg" alt="Strona na komputerze" width="370" height="294">
-                    <div class="overlay">
-                    <p class="text-photo">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+          <h4 hidden>Ten element ma być niewidoczny</h4>
+            <ul class="img__list">
+                <li class="img__list--item">
+                    <img class="img__list--photo" src="Images/img-9.jpg" alt="Strona na komputerze" width="370" height="294">
+                    <div class="img__list--overlay">
+                    <p class="img__list--text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
                     </div>
-                    <div class="text-border">
-                    <p class="img-name">Technocrack</p>
-                    <p class="function">Strona internetowa</p>
-                    </div>
-                </li>
-                <li class="img-list">
-                    <img class="photo-item" src="Images/img-10.jpg" alt="Grafika przedstawiająca koszykarzy" width="370" height="294">
-                <div class="overlay">    
-                    <p class="text-photo">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-                    </div>
-                    <div class="text-border">
-                    <p class="img-name">Grafika New Orlean vs Golden Star</p>
-                    <p class="function">Dizajn</p>
+                    <div class="img__text">
+                    <p class="img__text--name">Technocrack</p>
+                    <p class="img__text--function">Strona internetowa</p>
                     </div>
                 </li>
-                <li class="img-list">
-                    <img class="photo-item" src="Images/img-11.jpg" alt="Logo restauracji" width="370" height="294">
-                    <div class="overlay">
-                    <p class="text-photo">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <li class="img__list--item">
+                    <img class="img__list--photo" src="Images/img-10.jpg" alt="Grafika przedstawiająca koszykarzy" width="370" height="294">
+                    <div class="img__list--overlay">    
+                    <p class="img__list--text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
                     </div>
-                    <div class="text-border">
-                    <p class="img-name">Restauracja Seafood</p>
-                    <p class="function">Aplikacja</p>
+                    <div class="img__text">
+                    <p class="img__text--name">Grafika New Orlean vs Golden Star</p>
+                    <p class="img__text--function">Dizajn</p>
                     </div>
                 </li>
-                <li class="img-list">
-                    <img class="photo-item" src="Images/img-12.jpg" alt="Zdjęcie słuchawek" width="370" height="294">
-                    <div class="overlay">
-                    <p class="text-photo">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <li class="img__list--item">
+                    <img class="img__list--photo" src="Images/img-11.jpg" alt="Logo restauracji" width="370" height="294">
+                    <div class="img__list--overlay">
+                    <p class="img__list--text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                    </div>
+                    <div class="img__text">
+                    <p class="img__text--name">Restauracja Seafood</p>
+                    <p class="img__text--function">Aplikacja</p>
+                    </div>
+                </li>
+                <li class="img__list--item">
+                    <img class="img__list--photo" src="Images/img-12.jpg" alt="Zdjęcie słuchawek" width="370" height="294">
+                    <div class="img__list--overlay">
+                    <p class="img__list--text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
                      </div>
-                    <div class="text-border">
-                    <p class="img-name">Projekt Prime</p>
-                    <p class="function">Marketing</p>
+                    <div class="img__text">
+                    <p class="img__text--name">Projekt Prime</p>
+                    <p class="img__text--function">Marketing</p>
                     </div>
                 </li>
-                <li class="img-list">
-                    <img class="photo-item" src="Images/img-4.jpg" alt="Dwa pudełka na zdjęciu" width="370" height="294">
-                    <div class="overlay">
-                    <p class="text-photo">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <li class="img__list--item">
+                    <img class="img__list--photo" src="Images/img-4.jpg" alt="Dwa pudełka na zdjęciu" width="370" height="294">
+                    <div class="img__list--overlay">
+                    <p class="img__list--text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
                      </div>
-                    <div class="text-border">
-                    <p class="img-name">Projekt Boxes</p>
-                    <p class="function">Aplikacja</p>
+                    <div class="img__text">
+                    <p class="img__text--name">Projekt Boxes</p>
+                    <p class="img__text--function">Aplikacja</p>
                     </div>
                 </li>
-                <li class="img-list">
-                    <img class="photo-item" src="Images/img-5.jpg" alt="Grafika przedstawiająca monitor" width="370" height="294">
-                    <div class="overlay">
-                    <p class="text-photo">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <li class="img__list--item">
+                    <img class="img__list--photo" src="Images/img-5.jpg" alt="Grafika przedstawiająca monitor" width="370" height="294">
+                    <div class="img__list--overlay">
+                    <p class="img__list--text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
                      </div>
-                    <div class="text-border">
-                    <p class="img-name">Inspiration has no Borders</p>
-                    <p class="function">Strona internetowa</p>
+                    <div class="img__text">
+                    <p class="img__text--name">Inspiration has no Borders</p>
+                    <p class="img__text--function">Strona internetowa</p>
                     </div>
                 </li>
-                <li class="img-list">
-                    <img class="photo-item" src="Images/img-6.jpg" alt="Zdjęcie czasopisma" width="370" height="294">
-                    <div class="overlay">
-                    <p class="text-photo">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <li class="img__list--item">
+                    <img class="img__list--photo" src="Images/img-6.jpg" alt="Zdjęcie czasopisma" width="370" height="294">
+                    <div class="img__list--overlay">
+                    <p class="img__list--text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
                      </div>
-                    <div class="text-border">
-                    <p class="img-name">Magazyn Limited Edition</p>
-                    <p class="function">Dizajn</p>
+                    <div class="img__text">
+                    <p class="img__text--name">Magazyn Limited Edition</p>
+                    <p class="img__text--function">Dizajn</p>
                     </div>
                 </li>
-                <li class="img-list">
-                    <img class="photo-item" src="Images/img-7.jpg" alt="Zdjęcie metki" width="370" height="294">
-                    <div class="overlay">
-                    <p class="text-photo">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <li class="img__list--item">
+                    <img class="img__list--photo" src="Images/img-7.jpg" alt="Zdjęcie metki" width="370" height="294">
+                    <div class="img__list--overlay">
+                    <p class="img__list--text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
                      </div>
-                    <div class="text-border">
-                    <p class="img-name">Projekt LAB</p>
-                    <p class="function">Marketing</p>
+                    <div class="img__text">
+                    <p class="img__text--name">Projekt LAB</p>
+                    <p class="img__text--function">Marketing</p>
                     </div>
                 </li>
-                <li class="img-list">
-                    <img class="photo-item" src="Images/img-8.jpg" alt="Osoba przeglada strone" width="370" height="294">
-                    <div class="overlay">
-                    <p class="text-photo">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <li class="img__list--item">
+                    <img class="img__list--photo" src="Images/img-8.jpg" alt="Osoba przeglada strone" width="370" height="294">
+                    <div class="img__list--overlay">
+                    <p class="img__list--text">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
                      </div>
-                    <div class="text-border">
-                    <p class="img-name">Growing Business</p>
-                    <p class="function">Aplikacja</p>
+                    <div class="img__text">
+                    <p class="img__text--name">Growing Business</p>
+                    <p class="img__text--function">Aplikacja</p>
                     </div>
                 </li>
             </ul>
