--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
     <title>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</title>
 </head>
 <body>
-    <header class="heading">
+     <header class="heading">
       <div class="container">
         <a class="logo" href="./index.html">Web<span class="logo-span">Studio</span></a>
        <nav class="nav">
-           <ul class="nav-list decoration">
-               <li class="nav-list-link">
-                   <a class="nav-list-item active link hover-transition" href="index.html">Agencja</a>
+           <ul class="nav__list decoration">
+               <li class="nav__item">
+                   <a class="nav__link link active hover-transition" href="index.html">Agencja</a>
                 </li>
-               <li class="nav-list-link">
-                   <a class="nav-list-item link hover-transition" href="portfolio.html">Portfolio</a>
+               <li class="nav__item">
+                   <a class="nav__link link hover-transition" href="portfolio.html">Portfolio</a>
                 </li>
-               <li class="nav-list-link">
-                   <a class="nav-list-item link hover-transition" href="#">Kontakt</a>
+               <li class="nav__item">
+                   <a class="nav__link link hover-transition" href="#">Kontakt</a>
                 </li>
            </ul>
        </nav> 
-       <p class="mail">
-        <a class="mail-address link hover-transition" href="info@devstudio.com">
-              <svg class="mail-icon" width="16px" height="12px">
+       <p class="heading__item">
+        <a class="heading__contact link hover-transition" href="info@devstudio.com">
+              <svg class="heading__icon" width="16px" height="12px">
                <use href="./Images/icon.svg#icon-envelope"></use>
            </svg>
             info@devstudio.com
         </a>
         </p>
-        <p class="phone">
-        <a class="phone-number link hover-transition" href="tel:+48111111111">
-            <svg class="phone-icon" width="10px" height="16px">
+        <p class="heading__item">
+        <a class="heading__contact link hover-transition" href="tel:+48111111111">
+            <svg class="heading__icon" width="10px" height="16px">
                 <use href="./Images/icon.svg#icon-Vector"></use>
             </svg>
             +48 111 111 111
@@ -58,8 +58,8 @@
     <button class="main-button" type="button" data-modal-open>Zamów usługę</button>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="btn" type="button" data-modal-close>
-                <svg class="btn-icon" width="18px" height="18px">
+            <button class="modal__btn" type="button" data-modal-close>
+                <svg class="modal__icon" width="18px" height="18px">
                     <use href="./Images/icon.svg#icon-close-black-18dp-2-1"></use>
                 </svg>
             </button>
