--- a/portfolio.html
+++ b/portfolio.html
@@ -28,17 +28,17 @@
                 </li>
            </ul>
        </nav> 
-       <p class="mail">
-        <a class="mail__address link hover-transition" href="info@devstudio.com">
-              <svg class="mail__icon" width="16px" height="12px">
+       <p class="heading__item">
+        <a class="heading__contact link hover-transition" href="info@devstudio.com">
+              <svg class="heading__icon" width="16px" height="12px">
                <use href="./Images/icon.svg#icon-envelope"></use>
            </svg>
             info@devstudio.com
         </a>
         </p>
-        <p class="phone">
-        <a class="phone__number link hover-transition" href="tel:+48111111111">
-            <svg class="phone__icon" width="10px" height="16px">
+        <p class="heading__item">
+        <a class="heading__contact link hover-transition" href="tel:+48111111111">
+            <svg class="heading__icon" width="10px" height="16px">
                 <use href="./Images/icon.svg#icon-Vector"></use>
             </svg>
             +48 111 111 111
