--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
      <header class="heading">
       <div class="container">
-        <a class="logo" href="./index.html">Web<span class="logo-span">Studio</span></a>
+        <a class="logo" href="./index.html">Web<span class="logo__span">Studio</span></a>
        <nav class="nav">
            <ul class="nav__list decoration">
                <li class="nav__item">
@@ -162,51 +162,51 @@
         </section>
         </div>
     </main>
-    <footer class="contact-box">
-    <div class="container">
-        <div class="display-box">
-    <section class="section-footer">
-    <h3 class="footer-heading">
+<footer class="contact__footer">
+    <div class="container ">
+    <div class="footer__flex">
+    <section class="section__links">
+    <h3 class="footer__heading">
     <a class="logo" href="./index.html">Web<span class="bottom-logo">Studio</span></a>
     </h3>
     <address>
-        <ul class="contact">
-            <li class="contact-list">
-                <a class="contact-link-map hover-transition" href="https://goo.gl/maps/KTg1pb1Rxh6M7XKi7" target="blank"> Warszawa, Aleje Jerozolimskie 21</a></li>
-            <li class="contact-list">
-                <a class="contact-link hover-transition" href="mailto:info@example.com">info@example.com</a></li>
-            <li class="contact-list">
-                <a class="contact-link hover-transition" href="tel:+48111111111">+48 111 111 111</a></li>
+        <ul class="contact__list">
+            <li class="contact__link">
+                <a class="contact__item contact__link--contact__item hover-transition" href="https://goo.gl/maps/KTg1pb1Rxh6M7XKi7" target="blank"> Warszawa, Aleje Jerozolimskie 21</a></li>
+            <li class="contact__link">
+                <a class="contact__item hover-transition" href="mailto:info@example.com">info@example.com</a></li>
+            <li class="contact__link">
+                <a class="contact__item hover-transition" href="tel:+48111111111">+48 111 111 111</a></li>
         </ul>
     </address>
     </section>
-    <div class="media-footer">
-    <h3 class="heading-footer">Dołącz do nas</h3>
+    <div class="media__footer">
+    <h3 class="media__footer--heading">Dołącz do nas</h3>
     <ul>
-        <li class="list-footer">
-            <a href="" class="list-footer-link hover-transition">
-                <svg class="list-footer-icon" width="20px" height="20px">
+        <li class="list__footer">
+            <a href="" class="list__footer--link hover-transition">
+                <svg class="list__footer--icon" width="20px" height="20px">
                     <use href="./Images/icon.svg#icon-instagram-2"></use>
                 </svg>
             </a>
         </li>
-        <li class="list-footer">
-            <a href="" class="list-footer-link hover-transition">
-                <svg class="list-footer-icon" width="20px" height="20px">
+        <li class="list__footer">
+            <a href="" class="list__footer--link hover-transition">
+                <svg class="list__footer--icon" width="20px" height="20px">
                     <use href="./Images/icon.svg#icon-twitter-1"></use>
                 </svg>
             </a>
         </li>
-        <li class="list-footer">
-            <a href="" class="list-footer-link hover-transition">
-                <svg class="list-footer-icon" width="20px" height="20px">
+        <li class="list__footer">
+            <a href="" class="list__footer--link hover-transition">
+                <svg class="list__footer--icon" width="20px" height="20px">
                     <use href="./Images/icon.svg#icon-facebook-1"></use>
                 </svg>
             </a>
         </li>
-        <li class="list-footer">
-            <a href="" class="list-footer-link hover-transition">
-                <svg class="list-footer-icon" width="20px" height="20px">
+        <li class="list__footer">
+            <a href="" class="list__footer--link hover-transition">
+                <svg class="list__footer--icon" width="20px" height="20px">
                     <use href="./Images/icon.svg#icon-linkedin-1"></use>
                 </svg>
             </a>
@@ -214,13 +214,13 @@
     </ul>
     </div>
     <form class="newsletter">
-    <label class="newsletter-title">
+    <label class="newsletter__title">
     Zapisz się do newslettera
-        <input class="newsletter-email" type="email" name="email" placeholder="E-mail" />
+        <input class="newsletter__email" type="email" name="email" placeholder="E-mail" />
     </label>
-        <button class="btn-newsletter" type="button">
+        <button class="newsletter__btn" type="button">
             Zapisz się
-            <svg class="btn-newsletter-icon" width="24px" height="24px">
+            <svg class="newsletter__icon" width="24px" height="24px">
                     <use href="./Images/icon.svg#icon-icon-send"></use>
                 </svg>
         </button>
